# arc

./: CMakeLists.txt  arithmeticpack.h  bitreader.h  bitwriter.h  bwtpack.cpp  bwtpack.h  bwtunpack.cpp  bwtunpack.h  compress.h  converter.cpp  huffman.h  huffmanpack.cpp  huffmanpack.h  huffmanunpack.cpp  huffmanunpack.h  lzsspack.h  lzssunpack.h  lzwpack.cpp  lzwpack.h  lzwunpack.h  main.cpp  mtfpack.cpp  mtfpack.h  mtfunpack.cpp  mtfunpack.h  rlepack.cpp  rlepack.h  rleunpack.cpp  rleunpack.h  test.cpp  utils.h
data/: bwt mtf entropy.csv  lzss.csv  lzw.csv  ru.txt  алг (2).docx
